chore: upgrading the Quarkus to the (current) latest: 3.7.0. Breaking change of the javax->jakarta package naming